--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h2 {
 
 input {
     padding: 10px 50px 10px 10px;
-    margin: 15px;
+    margin: 10px;
     font-size: 1em;
     border-radius: 5px;
 }
@@ -94,4 +94,16 @@ input {
     position: absolute;
     top: 80px;
     right: 30px;
+}
+
+.summary-container {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #202426;
+    border-radius: 10px;
+    text-align: center;
 }
