--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ input {
 }
 
 .summary-container {
-    display: none;
     position: absolute;
     top: 0;
     left: 0;
@@ -106,4 +105,13 @@ input {
     background-color: #202426;
     border-radius: 10px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.summary-container button {
+    margin: 30px;
 }
